--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,44 @@
-# Binaries for programs and plugins
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+biligo/
+.vscode/
+
+*.swp
+
+# temp ignore
+*.log
+*.cache
+*.diff
 *.exe
 *.exe~
-*.dll
-*.so
-*.dylib
+*.patch
+*.tmp
+*debug.test
 
-# Test binary, built with `go test -c`
-*.test
+# system ignore
+.DS_Store
+Thumbs.db
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# project
+*.cert
+*.key
+.test
+iprepo.txt
 
-# idea ignore
-.idea
+app/*/*/cmd/cmd
+app/*/*/*/cmd/cmd
+app/*/*/cmd/debug
+app/*/*/*/cmd/debug
+app/tool/kratos/kratos
+
+bazel-bin
+bazel-genfiles
+bazel-go-common
+bazel-out
+bazel-testlogs
+bazel-test
+_output
